--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,10 +2,10 @@
 
 <ul>
   <% @articles.each do |article| %>
-        <li>
-            <a href="/articles/<%= article.id %>">
-                <%= article.title %>
-            </a>
-        </li>
+    <li>
+      <%= link_to article.title, article %>
+    </li>
   <% end %>
 </ul>
+
+<%= link_to "New Article", new_article_path %>
