--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,3 +10,9 @@
                     turbo_confirm: "Are you sure?"
                   } %></li>
 </ul>
+
+<h2>Comments</h2>
+<%= render @article.comments %>
+
+<h2>Add a comment:</h2>
+<%= render 'comments/form' %>
